# DiSQL

./: CMakeLists.txt  DiSQL  DiSQL.cpp  README.md
.cache/clangd/index/: DiSQL.cpp.48B1B1421077206A.idx  connection.hpp.1EFCDD0ABD2E642A.idx  discord_client.hpp.06E40FCA5641819E.idx  discord_credentials.hpp.BCB6813450C929A1.idx  parser.hpp.88D0224AE967D480.idx
include/: CMakeLists.txt  discord.cpp  discord.hpp  discord_credentials.cpp  discord_credentials.hpp  parser.cpp  parser.hpp  qualifier.hpp  row_node.cpp  row_node.hpp  schema.cpp  schema.hpp  table.cpp  table.hpp
src/: discord_client.cpp  discord_client.hpp  lexxer.cpp  lexxer.hpp  parser.cpp  parser.hpp
src/models/: discord_credentials.cpp  discord_credentials.hpp  discord_row.hpp
src/tests/: CMakeLists.txt  a.out  parse_test[1]_include.cmake  parse_test[1]_tests.cmake  parse_tests.cpp  prelim_test.cpp
